<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".registry.signUp.SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/fragment_registry_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="50dp">

            <EditText
                android:id="@+id/sign_up_username_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/rounded_background"
                android:hint="@string/userName"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="20"
                android:maxLines="1" />

            <EditText
                android:id="@+id/user_input_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/rounded_background"
                android:gravity="start"
                android:hint="@string/user_input"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="20"
                android:maxLines="1" />

            <EditText
                android:id="@+id/sign_up_pass_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/rounded_background"
                android:gravity="start"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1" />

            <EditText
                android:id="@+id/sign_up_confirm_pass_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/rounded_background"
                android:gravity="start"
                android:hint="@string/rePassword"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1" />

            <Button
                android:id="@+id/sign_up_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/btn_rounded_1"
                android:text="@string/signUp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/already_logged_in_btn"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="@drawable/btn_rounded_1"
                android:text="@string/registered"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>