<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".registry.logIn.LogIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <include layout="@layout/fragment_registry_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="65dp">

            <EditText
                android:id="@+id/log_in_user_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/rounded_background"
                android:hint="@string/user_input"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="20"
                android:maxLines="1" />

            <EditText
                android:id="@+id/log_in_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:autofillHints="@string/password"
                android:background="@drawable/rounded_background"
                android:gravity="start"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1" />

            <Button
                android:id="@+id/log_in_logIn_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/btn_rounded_1"
                android:text="@string/logIn"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/go_to_signUp"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_rounded_1"
                    android:text="@string/signUp"
                    android:textSize="12sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/go_to_recovery"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_rounded_1"
                    android:text="@string/recovery"
                    android:textSize="12sp"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</ScrollView>