<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/gray"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_layout"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/white"
        android:padding="10dp">
        <!-- recycle view 2 -->
        <TextView
            android:id="@+id/posting_TV_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_steps"
            android:textColor="@color/green"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/posting_RV_steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layoutDirection="rtl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/posting_TV_steps"
            tools:listitem="@layout/fragment_posting_steps_item" />

        <ImageView
            android:id="@+id/posting_IV_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/ic_add"
            android:contentDescription="TODO"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/posting_RV_steps" />

        <Button
            android:id="@+id/posting_B_add_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@null"
            android:text="@string/add_new"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/posting_IV_step"
            app:layout_constraintTop_toBottomOf="@id/posting_RV_steps" />

        <Button
            android:id="@+id/posting_B_record"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_rounded_2"
            android:text="@string/record"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/posting_B_back_step"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/posting_B_add_step" />

        <Button
            android:id="@+id/posting_B_back_step"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_rounded_2"
            android:text="@string/back_step"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/posting_B_record"
            app:layout_constraintTop_toBottomOf="@id/posting_B_add_step" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>